# pykato

./: .gitignore  README.md  pyproject.toml
src/pykato/: buffer.py  fourd.py  function.py  jones.py  log.py  queue.py  zernike.py
src/pykato/plotfunction/: diagram.py  fixed_layout.py  fourd.py  gridspec_layout.py  jones.py  preset.py
src/pykato/resource/: __init__.py
tests/: _test_qt.py  test_buffer.py  test_fourd.py  test_function.py  test_jones.py  test_log.py  test_plotfunction.py
