[project]
name = "pykato"
version = "0.0.1"
authors = [
  { name="Kuravi H", email="kuravih@gmail.com" },
]
description = "Collection of miscellaneous python scripts"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kuravih/pykato"
Issues = "https://github.com/kuravih/pykato/issues"