[project]
name = "pykato"
version = "1.0.0"
description = "Collection of miscellaneous python scripts"
readme = "README.md"
authors = [
    { name = "Kuravi H", email = "kuravih@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "scikit-image>=0.26.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
fourd = [
    "h5py>=3.15.1",
    "astropy>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/kuravih/pykato"
Issues = "https://github.com/kuravih/pykato/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "pytest>=8.4.2",
]

[tool.setuptools.package-data]
pykato = ["resource/*.ttf"]